[gd_scene load_steps=5 format=2]

[ext_resource path="res://forms/lobby_menu/Lobby.gd" type="Script" id=1]
[ext_resource path="res://fonts/joystix monospace.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://forms/lobby_menu/PlayersContainer.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 2 )

[node name="Lobby" type="VBoxContainer"]
margin_left = 7.30593
margin_top = -1.60587
margin_right = 1303.3
margin_bottom = 604.394
custom_constants/separation = 150
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1295.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Lobby"
align = 1

[node name="FormContainer" type="VBoxContainer" parent="."]
margin_left = 397.0
margin_top = 306.0
margin_right = 897.0
margin_bottom = 606.0
rect_min_size = Vector2( 500, 300 )
size_flags_horizontal = 4
size_flags_vertical = 5
custom_constants/separation = 20

[node name="PlayersContainer" type="HBoxContainer" parent="FormContainer"]
margin_right = 500.0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 3 )

[node name="Start" type="Button" parent="FormContainer"]
margin_top = 20.0
margin_right = 500.0
margin_bottom = 68.0
text = "Start"

[node name="Back" type="Button" parent="FormContainer"]
margin_top = 88.0
margin_right = 500.0
margin_bottom = 136.0
text = "Back"
[connection signal="pressed" from="FormContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="FormContainer/Back" to="." method="_on_Back_pressed"]
